...
}

const List<OnboardingTemplate> kOnboardingTemplates = [
  OnboardingTemplate(emoji: '💧', nameRu: 'Пить воду', nameEn: 'Drink water'),
  OnboardingTemplate(
    emoji: '🧘',
    nameRu: 'Медитация',
    nameEn: 'Meditation',
  ),
  OnboardingTemplate(emoji: '🚶', nameRu: 'Прогулка', nameEn: 'Walk'),
  OnboardingTemplate(
    emoji: '🚭',
    nameRu: 'Без курения',
...
